<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <EditTextPreference
        android:key="@string/texto"
        android:title="@string/pref_texto"
        android:defaultValue="0"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/numero"
        android:title="@string/pref_numero"
        android:defaultValue="0"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/cantidad"
        android:title="@string/pref_cantidad"
        android:defaultValue="0"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />


</PreferenceScreen>
